feat(kconnect): fix custom partitioner and add tools work with minio